added meta titles

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -10,6 +10,7 @@
     "menu_Planning": "Planning",
     "menu_Record": "New record",
     "menu_Categories": "Categories",
+    "menu_extra_Detail": "Detail",
     "home_Title": "Bill",
     "home_currency_Account": "Currency account",
     "home_exchange_Rates": "Exchange rates",
@@ -63,8 +64,19 @@
     "empty_category": "There are no categories yet.",
     "empty_category_add": "Add new category",
     "empty_record": "There are no records yet.",
-    "empty_record_add": "Add new records",
+    "empty_record_add": "Add new record",
     "pagination_Prev": "Prev",
     "pagination_Next": "Next",
-    "create_tooltip_text": "Create new record"
+    "create_tooltip_text": "Create new record",
+    "login": "Login",
+    "register": "Register",
+    "category_create": "Category was created",
+    "category_update": "Category was successfully updated",
+    "record_create": "Record was successfully created",
+    "not_enough_money": "Not enough funds in the account",
+    "logout_$message": "You are logged out",
+    "login_$message": "Log in to the system",
+    "email_notFound_$message": "User with such email does not exist",
+    "email_inUse_$message": "Email is already taken",
+    "password_$message": "Wrong password"
 }
