--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -10,6 +10,7 @@
     "menu_Planning": "Планирование",
     "menu_Record": "Новая запись",
     "menu_Categories": "Категории",
+    "menu_extra_Detail": "Детально",
     "home_Title": "Счет",
     "home_currency_Account": "Счет в валюте",
     "home_exchange_Rates": "Курс валют",
@@ -60,11 +61,22 @@
     "detail_category": "Категория",
     "detail_record_notFound": "Запись с id=",
     "detail_exist_notFound": "не существует",
-    "empty_categoty": "Категорий пока нет.",
+    "empty_category": "Категорий пока нет.",
     "empty_category_add": "Добавить новую категорию",
     "empty_record": "Записей пока нет.",
     "empty_record_add": "Добавить новую запись",
     "pagination_Prev": "Назад",
     "pagination_Next": "Вперед",
-    "create_tooltip_text": "Создать новую запись"
+    "create_tooltip_text": "Создать новую запись",
+    "category_create": "Категория была создана",
+    "category_update": "Категория успешно обновлена",
+    "record_create": "Запись успешно создана",
+    "not_enough_money": "Недостаточно средств на счете",
+    "login": "Авторизация",
+    "register": "Регистрация",
+    "logout_$message": "Вы вышли из системы",
+    "login_$message": "Для работы авторизируйтесь в системе",
+    "email_notFound_$message": "Пользователя с таким email не существует",
+    "email_inUse_$message": "Email уже занят",
+    "password_$message": "Неверный пароль"
 }
